==> davideferrario/TommRo/libs/02_tommRoCHw/template/bus/env/arm/Nordic/tommRoCHwTemplateBusEnvironmentI2CMaster.c <==
#include "bus/env/tommRoCHwTemplateBusEnvironmentI2CMaster.h"
#include "TOMMROC.h"
#include "env/tommRoCTemplateEnv.h"
#include "bus/common/i2c/master/tommRoCHwTemplateBusCommonI2CMasterCb.h"
#include "bus/env/arm/Nordic/i2c/tommRoCHwTemplateBusI2CNordicHal.h"
#include "TOMMROCMwTemplate.h"
#include "nrfx_twi.h"
#include <stdbool.h>
#define __DEFAULT_FREQUENCY__           (NRF_TWI_FREQ_100K)
#define __DEFAULT_SCL_PIN_NUM__         (31)
#define __DEFAULT_SDA_PIN_NUM__         (31)
#define __EMPTY___tommRoC_hw_i2c_master_config_t____    \
{                                                       \
    /* .frequency */    __DEFAULT_FREQUENCY__,          \
    /* .sclPin */       __DEFAULT_SCL_PIN_NUM__,        \
    /* .sdaPin */       __DEFAULT_SDA_PIN_NUM__,        \
}
#define __EMPTY___nordic_callback_data_t____            \
{                                                       \
    /* .cbCalled */         false,                      \
    /* .transferResult */   NRFX_ERROR_INTERNAL,        \
}
#define __EMPTY___tommRoC_hw_i2c_master_handle_t____                    \
{                                                                       \
    /* .nrfxTwi */              NRFX_TWI_INSTANCE(0),                   \
    /* .nordicCallbackData */   __EMPTY___nordic_callback_data_t____,   \
}

static tommRoC_hw_err_enum_t _i2c_master_transfer(
                __tommRoC_hw_i2c_master_handle_t__* const   i2cHandlePtr,
                nrfx_twi_xfer_desc_t*               const   nrfxTwiXferDescPtr,
        const   uint32_t                                    flags,
        const   uint32_t                                    timeoutMsec) {

    nrfx_twi_t* nrfxI2cPtr = &i2cHandlePtr->nrfxTwi;

    tommRoC_timer_t timer;
    uint32_t elapsedMsec;

    i2cHandlePtr->nordicCallbackData.cbCalled = false;

    if (NRFX_SUCCESS != nrfx_twi_xfer(nrfxI2cPtr, nrfxTwiXferDescPtr, flags)) {
        return TOMMRO_C_HW_LOW_LEVEL_ERR;
    }

    TOMMROC_ASSERT_TOMMROC_LIB_FUNCT_SUCCESS(tommRoCTimerStart(&timer, timeoutMsec));

    do {

        if (i2cHandlePtr->nordicCallbackData.cbCalled) {
            if (NRFX_SUCCESS == i2cHandlePtr->nordicCallbackData.transferResult) {
                return TOMMRO_C_HW_ERR_SUCCESS;
            }
            else {
                return TOMMRO_C_HW_BUS_OPERATION_FAIL_ERR;
            }
        }

        TOMMROC_ASSERT_TOMMROC_LIB_FUNCT_SUCCESS(tommRoCTimerElapsed(&timer, &elapsedMsec));

        if (elapsedMsec > 1) {
            TOMMROC_ASSERT_TOMMROC_LIB_FUNCT_SUCCESS(tommRoCOsDelayMsec(1));
        }
        else {
#if defined (__TOMMROC_MW_THREAD_TEMPLATE_IS_USED__)
            // NOTE: don't replace with tommRoCOsDelayMsec(0) because as fast as possible is needed in case of single task project.
            tommRoCMwThreadYield();
#endif
        }

    } while (TOMMRO_C_TIMER_NOT_EXPIRED_ERR == tommRoCTimerIsExpired(&timer));

    // NOTE: in case of timeout expired, check again if SUCCESS because it could be the case in multitask environment
    if ((i2cHandlePtr->nordicCallbackData.cbCalled) && (NRFX_SUCCESS == i2cHandlePtr->nordicCallbackData.transferResult)) {
        return TOMMRO_C_HW_ERR_SUCCESS;
    }

    return TOMMRO_C_HW_BUS_OPERATION_FAIL_ERR;
}

static tommRoC_hw_err_enum_t _i2c_master_write_transfer(
                __tommRoC_hw_i2c_master_handle_t__* const   i2cHandlePtr,
        const   uint8_t                                     slaveAddress7Bit,
        const   uint8_t*                            const   writeBufferPtr,
        const   uint16_t                                    writeBufferLen,
        const   uint32_t                                    flags,
        const   uint32_t                                    timeoutMsec) {

    nrfx_twi_xfer_desc_t nrfxTwiXferDesc = NRFX_TWI_XFER_DESC_TX(slaveAddress7Bit, (uint8_t*) writeBufferPtr, writeBufferLen);

    TOMMROC_HW_ERR_IF_TOMMROC_HW_LIB_FUNCT_NOT_SUCCESS_RETURN_RESULT(_i2c_master_transfer(i2cHandlePtr, &nrfxTwiXferDesc, flags, timeoutMsec));

    return TOMMRO_C_HW_ERR_SUCCESS;
}

static tommRoC_hw_err_enum_t _i2c_master_read_transfer(
                __tommRoC_hw_i2c_master_handle_t__* const   i2cHandlePtr,
        const   uint8_t                                     slaveAddress7Bit,
                uint8_t*                            const   readBufferPtr,
        const   uint16_t                                    toReadAmount,
        const   uint32_t                                    flags,
        const   uint32_t                                    timeoutMsec) {

    nrfx_twi_xfer_desc_t nrfxTwiXferDesc = NRFX_TWI_XFER_DESC_RX(slaveAddress7Bit, readBufferPtr, toReadAmount);

    TOMMROC_HW_ERR_IF_TOMMROC_HW_LIB_FUNCT_NOT_SUCCESS_RETURN_RESULT(_i2c_master_transfer(i2cHandlePtr, &nrfxTwiXferDesc, flags, timeoutMsec));

    return TOMMRO_C_HW_ERR_SUCCESS;
}

static tommRoC_hw_err_enum_t _i2c_master_write_read_transfer(
                __tommRoC_hw_i2c_master_handle_t__* const   i2cHandlePtr,
        const   uint8_t                                     slaveAddress7Bit,
        const   uint8_t*                            const   writeBufferPtr,
        const   uint16_t                                    writeBufferLen,
                uint8_t*                            const   readBufferPtr,
        const   uint16_t                                    toReadAmount,
        const   uint32_t                                    flags,
        const   uint32_t                                    timeoutMsec) {

    nrfx_twi_xfer_desc_t nrfxTwiXferDesc = NRFX_TWI_XFER_DESC_TXRX(slaveAddress7Bit, (uint8_t*) writeBufferPtr, writeBufferLen, readBufferPtr, toReadAmount);

    TOMMROC_HW_ERR_IF_TOMMROC_HW_LIB_FUNCT_NOT_SUCCESS_RETURN_RESULT(_i2c_master_transfer(i2cHandlePtr, &nrfxTwiXferDesc, flags, timeoutMsec));

    return TOMMRO_C_HW_ERR_SUCCESS;
}

tommRoC_hw_err_enum_t tommRoCHwTemplateBusEnvironmentI2CMaster0Start(
                tommRoC_hw_bus_cb_funct_t*  const   cbFunctPtr) {

    tommRoC_hw_template_bus_i2c_nordic_hal_config_t halConfig;

    halConfig.nrfxTwi.p_twi         = NRF_TWI0;
    halConfig.nrfxTwi.drv_inst_idx  = NRFX_TWI0_INST_IDX;
    halConfig.frequency             = _i2c_master_config_0.frequency;
    halConfig.sclPin                = _i2c_master_config_0.sclPin;
    halConfig.sdaPin                = _i2c_master_config_0.sdaPin;
    halConfig.nrfxTwiEvtHandler     = _nrfx_twi0_evt_handler;

    TOMMROC_HW_ASSERT_TOMMROC_HW_LIB_FUNCT_SUCCESS(tommRoCHwTemplateBusI2CNordicHalMasterInit(&halConfig));

    _i2c_master_I2C0_get_callback_ARM(cbFunctPtr);

    TOMMROC_ASSERT_TOMMROC_LIB_FUNCT_SUCCESS(tommRoCUtilMemCopy(&_i2c_master_handle_0.nrfxTwi, &halConfig.nrfxTwi, sizeof(nrfx_twi_t)));

    return TOMMRO_C_HW_ERR_SUCCESS;
}
