==> davideferrario/TommRo/libs/02_tommRoCHw/template/bus/env/arm/SiLabs/tommRoCHwTemplateBusEnvironmentI2CMaster.c <==
#include "bus/env/tommRoCHwTemplateBusEnvironmentI2CMaster.h"
#include "TOMMROC.h"
#include "env/tommRoCTemplateEnv.h"
#include "bus/common/i2c/master/tommRoCHwTemplateBusCommonI2CMasterCb.h"
#include "bus/env/arm/SiLabs/i2c/tommRoCHwTemplateBusI2CSiLabsHal.h"
#include "bus/env/arm/SiLabs/i2c/tommRoCHwTemplateBusI2CSiLabsLocation.h"
#include "TOMMROCMwTemplate.h"
#define __DEFAULT_BAUDRATE__            (100000)
#define __DEFAULT_MCU_PULL_UP_STATUS__  (TOMMRO_C_UTIL_DISABLED)
#define __EMPTY___tommRoC_hw_i2c_master_config_t____                                    \
{                                                                                       \
    /* .baudRate */         __DEFAULT_BAUDRATE__,                                       \
    /* .siLabsLocation */   __EMPTY_tommRoC_hw_template_bus_i2c_silabs_location_t__,    \
    /* .mcuPullUpStatus */  __DEFAULT_MCU_PULL_UP_STATUS__,                             \
}
#define __EMPTY___tommRoC_hw_i2c_master_handle_t____    \
{                                                       \
    /* .i2cPtr */           NULL,                       \
    /* .i2cStatus */        i2cTransferSwFault,         \
}

static tommRoC_hw_err_enum_t _i2c_master_transfer(
                __tommRoC_hw_i2c_master_handle_t__* const   i2cHandlePtr,
                I2C_TransferSeq_TypeDef*            const   transferSeqPtr,
        const   uint32_t                                    timeoutMsec) {

    I2C_TypeDef* i2cTypePtr = (I2C_TypeDef*) i2cHandlePtr->i2cPtr;
    volatile I2C_TransferReturn_TypeDef* i2cStatusPtr = &i2cHandlePtr->i2cStatus;

    tommRoC_timer_t timer;
    uint32_t elapsedMsec;

    // Do a polled transfer
    *i2cStatusPtr = I2C_TransferInit(i2cTypePtr, transferSeqPtr);
    if (i2cTransferInProgress != *i2cStatusPtr) {
        return TOMMRO_C_HW_LOW_LEVEL_ERR;
    }

    TOMMROC_ASSERT_TOMMROC_LIB_FUNCT_SUCCESS(tommRoCTimerStart(&timer, timeoutMsec));

    do {

        if (i2cTransferDone == *i2cStatusPtr) {
            return TOMMRO_C_HW_ERR_SUCCESS;
        }

        TOMMROC_ASSERT_TOMMROC_LIB_FUNCT_SUCCESS(tommRoCTimerElapsed(&timer, &elapsedMsec));

        if (elapsedMsec > 1) {
            TOMMROC_ASSERT_TOMMROC_LIB_FUNCT_SUCCESS(tommRoCOsDelayMsec(1));
        }
        else {
#if defined (__TOMMROC_MW_THREAD_TEMPLATE_IS_USED__)
            // NOTE: don't replace with tommRoCOsDelayMsec(0) because as fast as possible is needed in case of single task project.
            tommRoCMwThreadYield();
#endif
        }

    } while (TOMMRO_C_TIMER_NOT_EXPIRED_ERR == tommRoCTimerIsExpired(&timer));
    
    // NOTE: in case of timeout expired, check again if SUCCESS because it could be the case in multitask environment
    if (i2cTransferDone == *i2cStatusPtr) {
        return TOMMRO_C_HW_ERR_SUCCESS;
    }
    
    return TOMMRO_C_HW_BUS_OPERATION_FAIL_ERR;
}

static tommRoC_hw_err_enum_t _i2c_master_write_transfer(
                __tommRoC_hw_i2c_master_handle_t__* const   i2cHandlePtr,
        const   uint8_t                                     slaveAddress7Bit,
        const   uint8_t*                            const   writeBufferPtr,
        const   uint16_t                                    writeBufferLen,
        const   uint32_t                                    timeoutMsec) {
            
    I2C_TransferSeq_TypeDef transferSeq;

    transferSeq.addr        = (uint16_t) slaveAddress7Bit << 1;
    transferSeq.flags       = I2C_FLAG_WRITE;
    transferSeq.buf[0].data = (uint8_t*) writeBufferPtr;
    transferSeq.buf[0].len  = writeBufferLen;
    transferSeq.buf[1].data = NULL;
    transferSeq.buf[1].len  = 0;

    TOMMROC_HW_ERR_IF_TOMMROC_HW_LIB_FUNCT_NOT_SUCCESS_RETURN_RESULT(_i2c_master_transfer(i2cHandlePtr, &transferSeq, timeoutMsec));

    return TOMMRO_C_HW_ERR_SUCCESS;
}

static tommRoC_hw_err_enum_t _i2c_master_read_transfer(
                __tommRoC_hw_i2c_master_handle_t__* const   i2cHandlePtr,
        const   uint8_t                                     slaveAddress7Bit,
                uint8_t*                            const   readBufferPtr,
        const   uint16_t                                    toReadAmount,
        const   uint32_t                                    timeoutMsec) {
            
    I2C_TransferSeq_TypeDef transferSeq;

    transferSeq.addr        = (uint16_t) slaveAddress7Bit << 1;
    transferSeq.flags       = I2C_FLAG_READ;
    transferSeq.buf[0].data = readBufferPtr;
    transferSeq.buf[0].len  = toReadAmount;
    transferSeq.buf[1].data = NULL;
    transferSeq.buf[1].len  = 0;

    TOMMROC_HW_ERR_IF_TOMMROC_HW_LIB_FUNCT_NOT_SUCCESS_RETURN_RESULT(_i2c_master_transfer(i2cHandlePtr, &transferSeq, timeoutMsec));

    return TOMMRO_C_HW_ERR_SUCCESS;
}

static tommRoC_hw_err_enum_t _i2c_master_write_read_transfer(
                __tommRoC_hw_i2c_master_handle_t__* const   i2cHandlePtr,
        const   uint8_t                                     slaveAddress7Bit,
        const   uint8_t*                            const   writeBufferPtr,
        const   uint16_t                                    writeBufferLen,
                uint8_t*                            const   readBufferPtr,
        const   uint16_t                                    toReadAmount,
        const   uint32_t                                    timeoutMsec) {

    I2C_TransferSeq_TypeDef transferSeq;

    transferSeq.addr        = (uint16_t) slaveAddress7Bit << 1;
    transferSeq.flags       = I2C_FLAG_WRITE_READ;
    transferSeq.buf[0].data = (uint8_t*) writeBufferPtr;
    transferSeq.buf[0].len  = writeBufferLen;
    transferSeq.buf[1].data = readBufferPtr;
    transferSeq.buf[1].len  = toReadAmount;

    TOMMROC_HW_ERR_IF_TOMMROC_HW_LIB_FUNCT_NOT_SUCCESS_RETURN_RESULT(_i2c_master_transfer(i2cHandlePtr, &transferSeq, timeoutMsec));

    return TOMMRO_C_HW_ERR_SUCCESS;
}

tommRoC_hw_err_enum_t tommRoCHwTemplateBusEnvironmentI2CMaster0Start(
        tommRoC_hw_bus_cb_funct_t*  const   cbFunctPtr) {

    tommRoC_hw_template_bus_i2c_silabs_hal_config_t halConfig;

    halConfig.clock             = cmuClock_I2C0;
    halConfig.i2cPtr            = (void*) I2C0;
    halConfig.baudRate          = _i2c_master_config_0.baudRate;
    halConfig.IRQn              = I2C0_IRQn;
    halConfig.mcuPullUpStatus   = _i2c_master_config_0.mcuPullUpStatus;
    TOMMROC_ASSERT_TOMMROC_LIB_FUNCT_SUCCESS(tommRoCUtilMemCopy(&halConfig.location, &_i2c_master_config_0.siLabsLocation, sizeof(tommRoC_hw_template_bus_i2c_silabs_location_t)));

    TOMMROC_HW_ASSERT_TOMMROC_HW_LIB_FUNCT_SUCCESS(tommRoCHwTemplateBusI2CSiLabsHalMasterInit(&halConfig));

    _i2c_master_I2C0_get_callback_ARM(cbFunctPtr);

    _i2c_master_handle_0.i2cPtr = halConfig.i2cPtr;

    return TOMMRO_C_HW_ERR_SUCCESS;
}
